{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 85,
  "lineage": "1bfc45b1-d687-6bdd-1a7b-5f5fc4254e91",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "mediawikigateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendAddressPools/backend-address-pool",
                "ip_addresses": [
                  "10.0.1.4"
                ],
                "name": "backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendHttpSettingsCollection/backend-http-setting",
                "name": "backend-http-setting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendIPConfigurations/Public-frontend-ip-configuration",
                "name": "Public-frontend-ip-configuration",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/publicIPAddresses/mediawikiAGPublicIP",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendPorts/443",
                "name": "443",
                "port": 443
              },
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendPorts/80",
                "name": "80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/gatewayIPConfigurations/medaiwikiAG-configuration",
                "name": "medaiwikiAG-configuration",
                "subnet_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/subnets/mediawikiAGSubnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendIPConfigurations/Public-frontend-ip-configuration",
                "frontend_ip_configuration_name": "Public-frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendPorts/80",
                "frontend_port_name": "80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendIPConfigurations/Public-frontend-ip-configuration",
                "frontend_ip_configuration_name": "Public-frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendPorts/443",
                "frontend_port_name": "443",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/httpListeners/https-listener",
                "name": "https-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/sslCertificates/mediawiki",
                "ssl_certificate_name": "mediawiki",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mediawikikeyvaulttls"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "eastus",
            "name": "medaiwikiAG",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendHttpSettingsCollection/backend-http-setting",
                "backend_http_settings_name": "backend-http-setting",
                "http_listener_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/requestRoutingRules/request-routing-rule-1",
                "name": "request-routing-rule-1",
                "priority": 10010,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendHttpSettingsCollection/backend-http-setting",
                "backend_http_settings_name": "backend-http-setting",
                "http_listener_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/httpListeners/https-listener",
                "http_listener_name": "https-listener",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/requestRoutingRules/request-routing-rule-2",
                "name": "request-routing-rule-2",
                "priority": 1002,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-definite-tetra",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/sslCertificates/mediawiki",
                "key_vault_secret_id": "https://tlsmediawiki.vault.azure.net/secrets/mediawiki",
                "name": "mediawiki",
                "password": "",
                "public_cert_data": ""
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mediawiki_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/networkInterfaces/mediawikiNIC",
            "internal_domain_name_suffix": "vgf4ncl5opuefit15xbrur02la.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "mediawiki_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/publicIPAddresses/mediawikiPublicIP",
                "subnet_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/subnets/mediawikiSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-22-C6-D4",
            "name": "mediawikiNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-definite-tetra",
            "virtual_machine_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/RG-DEFINITE-TETRA/providers/Microsoft.Compute/virtualMachines/mediawikiVM"
          },
          "dependencies": [
            "azurerm_public_ip.mediawiki_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mediawiki_subnet",
            "azurerm_virtual_network.mediawiki_network",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/networkInterfaces/mediawikiNIC|/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/networkSecurityGroups/mediawikiNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/networkInterfaces/mediawikiNIC",
            "network_security_group_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/networkSecurityGroups/mediawikiNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.mediawiki_nic",
            "azurerm_network_security_group.mediawiki_nsg",
            "azurerm_public_ip.mediawiki_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mediawiki_subnet",
            "azurerm_virtual_network.mediawiki_network",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mediawiki_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/networkSecurityGroups/mediawikiNetworkSecurityGroup",
            "location": "eastus",
            "name": "mediawikiNetworkSecurityGroup",
            "resource_group_name": "rg-definite-tetra",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS_Ronie",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "109.255.161.14/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mediawikiAGPublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "domain_name_label": "mediawiki2023",
            "fqdn": "mediawiki2023.eastus.cloudapp.azure.com",
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/publicIPAddresses/mediawikiAGPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.188.180.66",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mediawikiAGPublicIP",
            "resource_group_name": "rg-definite-tetra",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mediawiki_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "domain_name_label": "mediawikibackend2023",
            "fqdn": "mediawikibackend2023.eastus.cloudapp.azure.com",
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/publicIPAddresses/mediawikiPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.100.30.105",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mediawikiPublicIP",
            "resource_group_name": "rg-definite-tetra",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/24",
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "delegation": [
              {
                "name": "dlg-Microsoft.DBforMySQL-flexibleServers",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforMySQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/rg-definite-tetra-vnet/subnets/default",
            "name": "default",
            "resource_group_name": "rg-definite-tetra",
            "timeouts": {
            },
            "virtual_network_name": "rg-definite-tetra-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mediawikiAGSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/subnets/mediawikiAGSubnet",
            "name": "mediawikiAGSubnet",
            "resource_group_name": "rg-definite-tetra",
            "virtual_network_name": "mediawikiVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.mediawiki_network",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mediawiki_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/subnets/mediawikiSubnet",
            "name": "mediawikiSubnet",
            "resource_group_name": "rg-definite-tetra",
            "virtual_network_name": "mediawikiVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.mediawiki_network",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mediawiki_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "89e68ba9-737f-42e8-a27b-fdc31a475c58",
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet",
            "location": "eastus",
            "name": "mediawikiVnet",
            "resource_group_name": "rg-definite-tetra",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/subnets/mediawikiSubnet",
                "name": "mediawikiSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/subnets/mediawikiAGSubnet",
                "name": "mediawikiAGSubnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mediawikidb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "14212e57-ac1b-40c7-8d91-afc3b8d00ffe",
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/rg-definite-tetra-vnet",
            "location": "eastus",
            "name": "rg-definite-tetra-vnet",
            "resource_group_name": "rg-definite-tetra",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/rg-definite-tetra-vnet/subnets/default",
                "name": "default"
              }
            ],
            "timeouts": {
            },
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peerDB2Wiki",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/rg-definite-tetra-vnet/virtualNetworkPeerings/peerDB2Wiki",
            "name": "peerDB2Wiki",
            "remote_virtual_network_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet",
            "resource_group_name": "rg-definite-tetra",
            "use_remote_gateways": false,
            "virtual_network_name": "rg-definite-tetra-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.mediawiki_network",
            "azurerm_virtual_network.mediawikidb",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peerWiki2DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/virtualNetworkPeerings/peerWiki2DB",
            "name": "peerWiki2DB",
            "remote_virtual_network_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/rg-definite-tetra-vnet",
            "resource_group_name": "rg-definite-tetra",
            "use_remote_gateways": false,
            "virtual_network_name": "mediawikiVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.mediawiki_network",
            "azurerm_virtual_network.mediawikidb",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "module": "module.application-gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendAddressPools/backend-address-pool",
                "ip_addresses": [
                  "10.0.1.4"
                ],
                "name": "backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendHttpSettingsCollection/backend-http-setting",
                "name": "backend-http-setting",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendIPConfigurations/Public-frontend-ip-configuration",
                "name": "Public-frontend-ip-configuration",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/publicIPAddresses/mediawikiAGPublicIP",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendPorts/443",
                "name": "443",
                "port": 443
              },
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendPorts/80",
                "name": "80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/gatewayIPConfigurations/medaiwikiAG-configuration",
                "name": "medaiwikiAG-configuration",
                "subnet_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/virtualNetworks/mediawikiVnet/subnets/mediawikiAGSubnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendIPConfigurations/Public-frontend-ip-configuration",
                "frontend_ip_configuration_name": "Public-frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/frontendPorts/80",
                "frontend_port_name": "80",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/httpListeners/http-listener",
                "name": "http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG",
            "identity": [],
            "location": "eastus",
            "name": "medaiwikiAG",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendAddressPools/backend-address-pool",
                "backend_address_pool_name": "backend-address-pool",
                "backend_http_settings_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/backendHttpSettingsCollection/backend-http-setting",
                "backend_http_settings_name": "backend-http-setting",
                "http_listener_id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/httpListeners/http-listener",
                "http_listener_name": "http-listener",
                "id": "/subscriptions/5e9bbbd4-9116-4cff-b4e0-3ea563490470/resourceGroups/rg-definite-tetra/providers/Microsoft.Network/applicationGateways/medaiwikiAG/requestRoutingRules/request-routing-rule-1",
                "name": "request-routing-rule-1",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-definite-tetra",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_linux_virtual_machine.mediawiki_vm",
            "azurerm_marketplace_agreement.mediawiki_bitnami",
            "azurerm_network_interface.mediawiki_nic",
            "azurerm_public_ip.mediawikiAGPublicIP",
            "azurerm_public_ip.mediawiki_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_storage_account.mediawiki_storage_account",
            "azurerm_subnet.mediawikiAGSubnet",
            "azurerm_subnet.mediawiki_subnet",
            "azurerm_virtual_network.mediawiki_network",
            "random_id.random_id",
            "random_pet.rg_name",
            "tls_private_key.example_ssh"
          ]
        }
      ]
    }
  ]
}